--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nuu/docs-theme",
+  "name": "@nuucognition/docs-theme",
   "version": "0.1.0",
   "private": true,
   "type": "module",
