--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "port": "tsx scripts/port-from-flint.ts"
   },
   "devDependencies": {
+    "tsx": "^4.19.2",
     "turbo": "^2.3.3",
     "typescript": "^5.7.2",
-    "tsx": "^4.19.2"
+    "yaml": "^2.8.2"
   },
   "packageManager": "pnpm@9.15.1",
   "engines": {
