--- a/sites/flint/vercel.json
+++ b/sites/flint/vercel.json
@@ -2,5 +2,5 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "framework": "nextjs",
   "installCommand": "pnpm install",
-  "buildCommand": "cd ../.. && pnpm build --filter=@nuu/flint-docs"
+  "buildCommand": "cd ../.. && pnpm build --filter=@nuucognition/flint-docs"
 }
